--- a/debian/po/tl.po
+++ b/debian/po/tl.po
@@ -3,57 +3,29 @@
 #
 # DO NOT MODIFY THIS FILE DIRECTLY: SUCH CHANGES WILL BE LOST
 #
-# Tagalog messages for debian-installer.
-# Copyright (C) 2004-2010 Software in the Public Interest, Inc.
-# This file is distributed under the same license as debian-installer.
-# Ipinamamahagi ang talaksang ito alinsunod sa lisensiya ng debian-installer.
-# Eric Pareja <xenos@upm.edu.ph>, 2004-200
-# Rick Bahague, Jr. <rbahaguejr@gmail.com>, 2004
-# Reviewed by Roel Cantada on Feb-Mar 2005.
-# Sinuri ni Roel Cantada noong Peb-Mar 2005.
-# This file is maintained by Eric Pareja <eric.pareja@gmail.com>
-# Inaalagaan ang talaksang ito ni Eric Pareja <eric.pareja@gmail.com>
-#
-# ituloy angsulong mga kapatid http://www.upm.edu.ph/~xenos
-#
-#
-# Translations from iso-codes:
-#   Eric Pareja <xenos@upm.edu.ph> 2005,2006
-#
-msgid ""
-msgstr ""
-"Project-Id-Version: debian-installer\n"
-"Report-Msgid-Bugs-To: nobootloader@packages.debian.org\n"
-"POT-Creation-Date: 2009-05-29 22:50+0000\n"
-"PO-Revision-Date: \n"
-"Last-Translator: \n"
-"Language-Team: Tagalog <debian-tl@banwa.upm.edu.ph>\n"
-"Language: tl\n"
-"MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-
 #. Type: text
 #. Description
 #. Main menu item
 #. :sl1:
 #: ../nobootloader.templates:1001
+#, fuzzy
 msgid "Continue without boot loader"
-msgstr "Magpatuloy na walang boot loader"
+msgstr "Nagluluklok ng aboot boot loader"
 
 #. Type: error
 #. Description
 #. :sl4:
 #: ../nobootloader.templates:2001
+#, fuzzy
 msgid "Failed to mount /target/proc"
-msgstr "Bigo ang pag-mount ng /target/proc"
+msgstr "Bigo ang pag-unmount ng mga partisyon"
 
 #. Type: error
 #. Description
 #. :sl4:
 #: ../nobootloader.templates:2001
 msgid "Mounting the proc file system on /target/proc failed."
-msgstr "Bigo ang pag-mount ng proc file system sa /target/proc."
+msgstr ""
 
 #. Type: error
 #. Description
@@ -61,15 +33,13 @@ msgstr "Bigo ang pag-mount ng proc file system sa /target/proc."
 #: ../nobootloader.templates:2001
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
 msgstr ""
-"Basahin ang /var/log/syslog o tignan ang virtuwal na konsol 4 para sa mga "
-"detalye."
 
 #. Type: error
 #. Description
 #. :sl4:
 #: ../nobootloader.templates:2001
 msgid "Warning: Your system may be unbootable!"
-msgstr "Babala: Maaaring hindi mag-boot ang inyong sistema!"
+msgstr ""
 
 #. Type: note
 #. Description
@@ -79,22 +49,25 @@ msgstr "Babala: Maaaring hindi mag-boot ang inyong sistema!"
 #. :sl4:
 #: ../nobootloader.templates:3001 ../nobootloader.templates:4001
 msgid "Setting firmware variables for automatic boot"
-msgstr "Tinatakda ang mga firmware variable para sa awtomatikong pag-boot"
+msgstr ""
 
 #. Type: note
 #. Description
 #. :sl4:
 #: ../nobootloader.templates:3001
+#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"May mga variable na kailangang itakda sa Genesi firmware upang mag-boot ng "
-"awtomatiko.  Sa katapusan ng pagluklok, mag-re-reboot ang sistema.  Sa "
-"firmware prompt, itakda ang mga sumusunod na mga firmware variable upang "
-"gumana ang auto-booting:"
+"May mga variable na kailangan itakda sa Netwinder NeTTrom firmware upang mag-"
+"boot ng awtomatiko ang sistema sa linux. Sa katapusan ng hakbang ng pag-"
+"install na ito, mag-re-reboot ang sistema, at ang firmware ay susubukang mag-"
+"autoboot. Maaari ninyong ihinto ito sa pag-pindot ng alinmang tiklado. "
+"Kayo'y ililipat sa NeTTrom command system kung saan ay kailangan niyong "
+"ipatakbo ang mga sumusunod:"
 
 #. Type: note
 #. Description
@@ -104,9 +77,6 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
-"Kinakailangan lang ninyong gawin ito ng isang beses.  Matapos nito, ipasok "
-"ang \"boot\" na utos o i-reboot ang sistema upang magpatuloy sa inyong "
-"bagong luklok na sistema."
 
 #. Type: note
 #. Description
@@ -116,21 +86,23 @@ msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr ""
-"Sa halip, maaari kayong mag-boot ng kernel ng mano-mano sa pamamagitan ng "
-"pagbigay sa firmware prompt ng:"
 
 #. Type: note
 #. Description
 #. :sl4:
 #: ../nobootloader.templates:4001
+#, fuzzy
 msgid ""
 "Some variables need to be set in CFE in order for your system to boot "
 "automatically. At the end of installation, the system will reboot. At the "
 "firmware prompt, set the following variables to simplify booting:"
 msgstr ""
-"May mga variable na kailangang itakda sa CFE upang mag-boot ng awtomatiko.  "
-"Sa katapusan ng pagluklok, mag-re-reboot ang sistema.  Sa firmware prompt, "
-"itakda ang mga sumusunod na mga firmware variable upang mapadali ang booting:"
+"May mga variable na kailangan itakda sa Netwinder NeTTrom firmware upang mag-"
+"boot ng awtomatiko ang sistema sa linux. Sa katapusan ng hakbang ng pag-"
+"install na ito, mag-re-reboot ang sistema, at ang firmware ay susubukang mag-"
+"autoboot. Maaari ninyong ihinto ito sa pag-pindot ng alinmang tiklado. "
+"Kayo'y ililipat sa NeTTrom command system kung saan ay kailangan niyong "
+"ipatakbo ang mga sumusunod:"
 
 #. Type: note
 #. Description
@@ -140,8 +112,6 @@ msgid ""
 "You will only need to do this once. This enables you to just issue the "
 "command \"boot_debian\" at the CFE prompt."
 msgstr ""
-"Kinakailangang gawin ito ng isang beses lamang. Dahil dito ay maaaring "
-"magbigay ng utos na \"boot_debian\" sa CFE prompt."
 
 #. Type: note
 #. Description
@@ -151,15 +121,14 @@ msgid ""
 "If you prefer to auto-boot on every startup, you can set the following "
 "variable in addition to the ones above:"
 msgstr ""
-"Kung nais na mag-auto-boot tuwing startup, maaaring itakda ang mga sumusunod "
-"na mga variable bukod sa mga nakalista sa itaas:"
 
 #. Type: note
 #. Description
 #. :sl3:
 #: ../nobootloader.templates:5001
+#, fuzzy
 msgid "No boot loader installed"
-msgstr "Walang boot loader na naka-install"
+msgstr "Matagumpay ang pagluklok ng yaboot boot loader."
 
 #. Type: note
 #. Description
@@ -169,9 +138,6 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"Walang naka-install na boot loader, maaaring dahil pinili niyong hindi mag-"
-"install nito o dahil wala pang suporta ang inyong arkitektura para sa boot "
-"loader."
 
 #. Type: note
 #. Description
@@ -181,5 +147,3 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"Kinakailangan niyong mag-boot na may ${KERNEL} na kernel sa partisyong "
-"${BOOT} at ${ROOT} na bigay bilang argument sa kernel."
