--- a/debian/po/bs.po
+++ b/debian/po/bs.po
@@ -3,27 +3,59 @@
 #
 # DO NOT MODIFY THIS FILE DIRECTLY: SUCH CHANGES WILL BE LOST
 #
+# translation of debian-installer_packages_po_sublevel1_bs.po to Bosnian
+# Bosnian messages for debian-installer.
+# Copyright (C) 2003 Software in the Public Interest, Inc.
+# This file is distributed under the same license as debian-installer.
+#
+# Safir Secerovic <sapphire@linux.org.ba>, 2006.
+# Armin Besirovic <armin@linux.org.ba>, 2008.
+#
+# Translations from iso-codes:
+#   Alastair McKinstry <mckinstry@computer.org>, 2001,2002.
+#   Free Software Foundation, Inc., 2001,2002,2003,2004
+#   Safir Šećerović <sapphire@linux.org.ba>, 2004,2006.
+#   Vedran Ljubovic <vljubovic@smartnet.ba>, 2001
+#   (translations from drakfw).
+#   Translations from KDE:
+#   Nesiren Armin <bianchi@lugbih.org>, 2002
+#   Vedran Ljubovic <vljubovic@smartnet.ba>, 2002
+#
+msgid ""
+msgstr ""
+"Project-Id-Version: debian-installer_packages_po_sublevel1_bs\n"
+"Report-Msgid-Bugs-To: nobootloader@packages.debian.org\n"
+"POT-Creation-Date: 2009-05-29 22:50+0000\n"
+"PO-Revision-Date: 2013-11-29 19:21+0100\n"
+"Last-Translator: Amila Valjevčić <valjevcic.amila@gmail.com>\n"
+"Language-Team: Bosnian <lokal@linux.org.ba>\n"
+"Language: bs\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: 3;\n"
+
 #. Type: text
 #. Description
 #. Main menu item
 #. :sl1:
 #: ../nobootloader.templates:1001
 msgid "Continue without boot loader"
-msgstr ""
+msgstr "Nastavi bez boot loadera"
 
 #. Type: error
 #. Description
 #. :sl4:
 #: ../nobootloader.templates:2001
 msgid "Failed to mount /target/proc"
-msgstr ""
+msgstr "Nemogu montirati /target/proc"
 
 #. Type: error
 #. Description
 #. :sl4:
 #: ../nobootloader.templates:2001
 msgid "Mounting the proc file system on /target/proc failed."
-msgstr ""
+msgstr "Montiranje proc datotečnog sistema na /target/proc nije uspjelo."
 
 #. Type: error
 #. Description
@@ -31,13 +63,14 @@ msgstr ""
 #: ../nobootloader.templates:2001
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
 msgstr ""
+"Provjerite /var/log/syslog ili pogledajte virtualnu konzolu 4 za detalje."
 
 #. Type: error
 #. Description
 #. :sl4:
 #: ../nobootloader.templates:2001
 msgid "Warning: Your system may be unbootable!"
-msgstr ""
+msgstr "Upozorenje: Vaš sistem se neće moći podići!"
 
 #. Type: note
 #. Description
@@ -47,7 +80,7 @@ msgstr ""
 #. :sl4:
 #: ../nobootloader.templates:3001 ../nobootloader.templates:4001
 msgid "Setting firmware variables for automatic boot"
-msgstr ""
+msgstr "Postavljam varijable firmwarea za automatsko podizanje"
 
 #. Type: note
 #. Description
@@ -59,6 +92,10 @@ msgid ""
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
+"Neke varijable se trebaju postaviti u Genesi firmware-u kako bi se Vaš "
+"sistem automatski podizao.  Na kraju instalacije, sistem će se ponovo "
+"podići.  Na firmware promptu, postavite sljedeće firmware varijable kako bi "
+"omogućili automatsko podizanje:"
 
 #. Type: note
 #. Description
@@ -68,7 +105,12 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
+"Ovo trebate uraditi samo jednom.  Nakon toga, ukucajte \"boot\" naredbu ili "
+"ponovo podignite sistem kako biste nastavili k vašem novo instaliranom "
+"sistemu."
 
+#  Type: note
+#  Description
 #. Type: note
 #. Description
 #. :sl4:
@@ -76,7 +118,7 @@ msgstr ""
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
-msgstr ""
+msgstr "Alternativno, možete podići kernel ručno, unoseći na firmware promptu:"
 
 #. Type: note
 #. Description
@@ -87,6 +129,10 @@ msgid ""
 "automatically. At the end of installation, the system will reboot. At the "
 "firmware prompt, set the following variables to simplify booting:"
 msgstr ""
+"Neke varijable se trebaju postaviti u CFEu kako bi se Vaš sistem automatski "
+"podizao.  Na kraju instalacije, sistem će se restartati. Na firmware "
+"promptu, postavite sljedeće firmware varijable kako bi omogućili automatsko "
+"podizanje:"
 
 #. Type: note
 #. Description
@@ -96,6 +142,8 @@ msgid ""
 "You will only need to do this once. This enables you to just issue the "
 "command \"boot_debian\" at the CFE prompt."
 msgstr ""
+"Ovo trebate uraditi jednom. Ovo omogućuje da pokrenete komandu \"boot_debian"
+"\" na CFE promptu."
 
 #. Type: note
 #. Description
@@ -105,13 +153,15 @@ msgid ""
 "If you prefer to auto-boot on every startup, you can set the following "
 "variable in addition to the ones above:"
 msgstr ""
+"Ako preferirate automatsko startanje pri svakog pokretanju, možete postaviti "
+"sljedeću varijablu pored onih iznad:"
 
 #. Type: note
 #. Description
 #. :sl3:
 #: ../nobootloader.templates:5001
 msgid "No boot loader installed"
-msgstr ""
+msgstr "Boot loader nije instaliran"
 
 #. Type: note
 #. Description
@@ -121,6 +171,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
+"Boot loader nije instaliran, ili zbog toga što ste tako izabrali ili zbog "
+"toga što vaša specifična arhitektura još uvijek ne podržava boot loader."
 
 #. Type: note
 #. Description
@@ -130,3 +182,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
+"Trebati ćete ručno podignuti sistem sa ${KERNEL} kernelom na particiji "
+"${BOOT} i ${ROOT} proslijeđenim kao argumentom za kernel."
