--- a/debian/po/lt.po
+++ b/debian/po/lt.po
@@ -3,27 +3,59 @@
 #
 # DO NOT MODIFY THIS FILE DIRECTLY: SUCH CHANGES WILL BE LOST
 #
+# Lithuanian messages for debian-installer.
+# Copyright (C) 2003 Software in the Public Interest, Inc.
+# This file is distributed under the same license as debian-installer.
+# Marius Gedminas <mgedmin@b4net.lt>, 2004.
+# Darius Skilinskas <darius10@takas.lt>, 2005.
+# Kęstutis Biliūnas <kebil@kaunas.init.lt>, 2004...2010.
+# Translations from iso-codes:
+# Gintautas Miliauskas <gintas@akl.lt>, 2008.
+# Tobias Quathamer <toddy@debian.org>, 2007.
+# Translations taken from ICU SVN on 2007-09-09
+# Translations from KDE:
+# - Ričardas Čepas <rch@richard.eu.org>
+# Free Software Foundation, Inc., 2000-2001, 2004
+# Gediminas Paulauskas <menesis@delfi.lt>, 2000-2001.
+# Alastair McKinstry <mckinstry@computer.org>, 2001,2002.
+# Kęstutis Biliūnas <kebil@kaunas.init.lt>, 2004, 2006, 2008, 2009, 2010.
+# Rimas Kudelis <rq@akl.lt>, 2012.
+msgid ""
+msgstr ""
+"Project-Id-Version: debian-installer\n"
+"Report-Msgid-Bugs-To: nobootloader@packages.debian.org\n"
+"POT-Creation-Date: 2009-05-29 22:50+0000\n"
+"PO-Revision-Date: 2012-08-26 02:00+0300\n"
+"Last-Translator: Rimas Kudelis <rq@akl.lt>\n"
+"Language-Team: Lithuanian <komp_lt@konferencijos.lt>\n"
+"Language: lt\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && (n"
+"%100<10 || n%100>=20) ? 1 : 2);\n"
+
 #. Type: text
 #. Description
 #. Main menu item
 #. :sl1:
 #: ../nobootloader.templates:1001
 msgid "Continue without boot loader"
-msgstr ""
+msgstr "Tęsti be pradinio įkėliklio"
 
 #. Type: error
 #. Description
 #. :sl4:
 #: ../nobootloader.templates:2001
 msgid "Failed to mount /target/proc"
-msgstr ""
+msgstr "Nepavyko prijungti „/target/proc“"
 
 #. Type: error
 #. Description
 #. :sl4:
 #: ../nobootloader.templates:2001
 msgid "Mounting the proc file system on /target/proc failed."
-msgstr ""
+msgstr "Nepavyko prijungti „proc“ failų sistemos prie „/target/proc“."
 
 #. Type: error
 #. Description
@@ -31,13 +63,14 @@ msgstr ""
 #: ../nobootloader.templates:2001
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
 msgstr ""
+"Detaliau žiūrėkite į /var/log/syslog arba ketvirtojoje virtualioje konsolėje."
 
 #. Type: error
 #. Description
 #. :sl4:
 #: ../nobootloader.templates:2001
 msgid "Warning: Your system may be unbootable!"
-msgstr ""
+msgstr "Dėmesio: šio kompiuterio gali nebepavykti paleisti!"
 
 #. Type: note
 #. Description
@@ -47,7 +80,7 @@ msgstr ""
 #. :sl4:
 #: ../nobootloader.templates:3001 ../nobootloader.templates:4001
 msgid "Setting firmware variables for automatic boot"
-msgstr ""
+msgstr "Nustatomi mikroprogramos (firmware) kintamieji automatiniam įkėlimui"
 
 #. Type: note
 #. Description
@@ -59,6 +92,10 @@ msgid ""
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
+"Kad sistemą būtų galima automatiškai paleisti, turi būti nustatyta keletas "
+"„Genesi“ mikroprogramos kintamųjų. Įdiegimo pabaigoje sistema bus perleista. "
+"Kad įgalintumėte automatinį paleidimą, pamatę mikroprogramos raginimą, "
+"nustatykite šiuos mikroprogramos kintamuosius:"
 
 #. Type: note
 #. Description
@@ -68,6 +105,8 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
+"Tai atlikti turėsite tik kartą. Baigę, įveskite komandą „boot“ arba "
+"perleiskite kompiuterį, ir galėsite mėgautis naujai įdiegta sistema."
 
 #. Type: note
 #. Description
@@ -77,6 +116,8 @@ msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr ""
+"Jeigu norite branduolį kaskart įkelti rankiniu būdu, tai galite atlikti, "
+"mikroprogramos raginimo ekrane įvesdami štai ką:"
 
 #. Type: note
 #. Description
@@ -87,6 +128,10 @@ msgid ""
 "automatically. At the end of installation, the system will reboot. At the "
 "firmware prompt, set the following variables to simplify booting:"
 msgstr ""
+"Kad sistemą būtų galima automatiškai paleisti, turi būti nustatyta keletas "
+"CFE kintamųjų. Įdiegimo pabaigoje sistema bus perleista. Kad "
+"supaprastintumėte sistemos paleidimą, pamatę mikroprogramos raginimą, "
+"nustatykite šiuos mikroprogramos kintamuosius:"
 
 #. Type: note
 #. Description
@@ -96,6 +141,8 @@ msgid ""
 "You will only need to do this once. This enables you to just issue the "
 "command \"boot_debian\" at the CFE prompt."
 msgstr ""
+"Tai atlikti turėsite tik kartą. Tai suteiks galimybę CFE raginimo ekrane "
+"tiesiog įvesti komandą „boot_debian“."
 
 #. Type: note
 #. Description
@@ -105,13 +152,15 @@ msgid ""
 "If you prefer to auto-boot on every startup, you can set the following "
 "variable in addition to the ones above:"
 msgstr ""
+"Jei pageidaujate automatinio sistemos paleidimo kaskart įjungus kompiuterį, "
+"šalia anksčiau paminėtų kintamųjų papildomai nustatykite ir šį:"
 
 #. Type: note
 #. Description
 #. :sl3:
 #: ../nobootloader.templates:5001
 msgid "No boot loader installed"
-msgstr ""
+msgstr "Pradinis įkėliklis neįdiegtas"
 
 #. Type: note
 #. Description
@@ -121,6 +170,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
+"Pradinis įkėliklis neįdiegtas, nes arba taip nusprendėte, arba Jūsų "
+"kompiuterio architektūrai dar nėra pradinio įkėliklio."
 
 #. Type: note
 #. Description
@@ -130,3 +181,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
+"Jums teks atlikti įkeltį rankiniu būdu, naudojant branduolį ${KERNEL}, "
+"esantį disko skirsnyje ${BOOT}, ir perduodant jam parametrą ${ROOT}."
