--- a/debian/po/mr.po
+++ b/debian/po/mr.po
@@ -3,28 +3,31 @@
 #
 # DO NOT MODIFY THIS FILE DIRECTLY: SUCH CHANGES WILL BE LOST
 #
-#
-#
 # Debian Installer master translation file template
 # Don't forget to properly fill-in the header of PO files
-#
 # Debian Installer translators, please read the D-I i18n documentation
 # in doc/i18n/i18n.txt
-#
-#
+# Translations from iso-codes:
+# Alastair McKinstry <mckinstry@debian.org>, 2004.
+# Priti Patil <prithisd@gmail.com>, 2007.
+# Sampada Nakhare, 2007.
+# Sandeep Shedmake <sshedmak@redhat.com>, 2009, 2010.
+# localuser <sampadanakhare@gmail.com>, 2015.
+# Nayan Nakhare <nayannakhare@rediffmail.com>, 2018.
+# Prachi Joshi <josprachi@yahoo.com>, 2019.
 msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: nobootloader@packages.debian.org\n"
 "POT-Creation-Date: 2019-09-26 22:04+0000\n"
-"PO-Revision-Date: 2009-05-03 21:07+0530\n"
-"Last-Translator: Sampada <sampadanakhare@gmail.com>\n"
-"Language-Team: Marathi, janabhaaratii, C-DAC, Mumbai, India "
-"<janabhaaratii@cdacmumbai.in>\n"
-"Language: \n"
+"PO-Revision-Date: 2019-12-11 16:47+0000\n"
+"Last-Translator: Prachi Joshi <josprachi@yahoo.com>\n"
+"Language-Team: CDAC_DI\n"
+"Language: mr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n > 1;\n"
 
 #. Type: text
 #. Description
@@ -106,7 +109,7 @@ msgstr ""
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
-msgstr "पर्यायी, फर्मवेअर प्रॉम्प्ट वर हे दिल्यास तुम्ही स्वहस्ते गाभा आरंभ करू शकताः"
+msgstr "वैकल्पिकरित्या, आपण फर्मवेअर प्रॉमप्टवर प्रवेश करून कर्नल व्यक्तिचलितपणे बूट करु शकाल:"
 
 #. Type: note
 #. Description
@@ -141,7 +144,7 @@ msgid ""
 "variable in addition to the ones above:"
 msgstr ""
 "प्रत्येक प्रारंभवेळी स्वयं-आरंभ होणे तुम्हाला पसंत असेल, तर वरील चलितांव्यतिरिक्त पुढील चलित "
-"तुम्ही निर्धारित करू शकताः"
+"तुम्ही निर्धारित करू शकता:"
 
 #. Type: note
 #. Description
