--- a/debian/po/de.po
+++ b/debian/po/de.po
@@ -5,21 +5,26 @@
 #
 # German messages for debian-installer (sublevel1).
 # Copyright (C) 2003 Software in the Public Interest, Inc.
+# #
+# This file is distributed under the same license as debian-installer.
+# #
 # Console-setup strings translations:
 # (identified by "./console-setup.templates")
 # Copyright (C) 2006, the console-setup package'c copyright holder
 # Copyright (C) 2006, Matthias Julius
 # Copyright (C) 2007-2009 Helge Kreutzmann
 # Copyright (C) 2008-2011 Holger Wansing
-# This file is distributed under the same license as debian-installer.
-# Holger Wansing <linux@wansing-online.de>, 2008, 2009, 2010, 2011.
+# #
+# Translations from iso-codes:
+# Translations taken from ICU SVN on 2007-09-09
+# Holger Wansing <hwansing@mailbox.org>, 2019.
+# Holger Wansing <linux@wansing-online.de>, 2008 - 2018.
 # Jens Seidel <jensseidel@users.sf.net>, 2005, 2006, 2007, 2008.
 # Dennis Stampfer <seppy@debian.org>, 2003, 2004, 2005.
 # Alwin Meschede <ameschede@gmx.de>, 2003, 2004.
 # Bastian Blank <waldi@debian.org>, 2003.
 # Jan Luebbe <jluebbe@lasnet.de>, 2003.
 # Thorsten Sauter <tsauter@gmx.net>, 2003.
-# Translations from iso-codes:
 # Alastair McKinstry <mckinstry@computer.org>, 2001.
 # Björn Ganslandt <bganslan@gmx.net>, 2000, 2001.
 # Bruno Haible <bruno@clisp.org>, 2004, 2007.
@@ -29,16 +34,15 @@
 # Simon Hürlimann <simon.huerlimann@access.unizh.ch>, 2004.
 # Stefan Siegel <siegel@mandrakesoft.com>, 2001.
 # Tobias Quathamer <toddy@debian.org>, 2006, 2007, 2008, 2009, 2010.
-# Translations taken from ICU SVN on 2007-09-09
 # Wolfgang Rohdewald <wolfgang@rohdewald.de>, 2005.
 msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: nobootloader@packages.debian.org\n"
 "POT-Creation-Date: 2019-09-26 22:04+0000\n"
-"PO-Revision-Date: 2011-08-14 21:42+0200\n"
-"Last-Translator: Holger Wansing <linux@wansing-online.de>\n"
-"Language-Team: Debian German <debian-l10n-german@lists.debian.org>\n"
+"PO-Revision-Date: 2020-03-18 10:20+0100\n"
+"Last-Translator: Holger Wansing <hwansing@mailbox.org>\n"
+"Language-Team: German <debian-l10n-german@lists.debian.org>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -195,5 +199,6 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"Sie müssen manuell starten, indem Sie den Kernel ${KERNEL} auf der Partition "
-"${BOOT} sowie ${ROOT} als Bootparameter übergeben."
+"Sie müssen den Bootvorgang manuell anstossen, indem Sie den Kernel ${KERNEL} "
+"auf der Partition ${BOOT} sowie das Wurzelverzeichnis ${ROOT} als "
+"Bootparameter übergeben."
