--- a/debian/po/et.po
+++ b/debian/po/et.po
@@ -8,6 +8,7 @@
 # This translation is released under the same licence as the debian-installer.
 #
 # Siim Põder <siim@p6drad-teel.net>, 2007.
+# Kristjan Räts <kristjanrats@gmail.com>, 2017, 2018, 2020.
 #
 # Thanks to following Ubuntu Translators for review and fixes:
 #     Laur Mõtus
@@ -31,14 +32,14 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: nobootloader@packages.debian.org\n"
 "POT-Creation-Date: 2019-09-26 22:04+0000\n"
-"PO-Revision-Date: 2012-01-25 02:09+0200\n"
-"Last-Translator: Mattias Põldaru <mahfiaz@gmail.com>\n"
+"PO-Revision-Date: 2020-07-29 08:41+0000\n"
+"Last-Translator: Kristjan Räts <kristjanrats@gmail.com>\n"
 "Language-Team: Estonian <>\n"
 "Language: et\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n!=1);\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 #. Type: text
 #. Description
@@ -145,8 +146,8 @@ msgid ""
 "You will only need to do this once. This enables you to just issue the "
 "command \"boot_debian\" at the CFE prompt."
 msgstr ""
-"Seda tuleb teha ainult üks kord. Sellega saad käivitada  käsu \"boot_debian"
-"\" CFE käsuviibalt."
+"Seda tuleb teha ainult üks kord. Sellega saad käivitada käsu \"boot_debian\" "
+"CFE käsuviibalt."
 
 #. Type: note
 #. Description
